--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/vandors/bootstrap.min.css">
     <!-- Normalize-Libiry -->
     <link rel="stylesheet" href="css/vandors/normalize.css">
+    <!-- Slick-Libiry -->
+    <link rel="stylesheet" href="css/vandors/slick.css">
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -466,12 +468,16 @@
                         <input type="email" placeholder="Email">
                         <button class="btn">Sign Up</button>
                     </form>
-                </div>   <!--./txt-->
+                </div>
+                <!--./txt-->
             </div>
             <i class="fa fa-angle-up" aria-hidden="true"></i>
-        </div>   <!--./container-->
+        </div>
+        <!--./container-->
     </section>
     <!--End Mosaic Stock-->
+
+    <!-- Start Trusted -->
     <section class="trusted">
         <div class="container text-center">
             <div class="title-trusted">
@@ -494,18 +500,302 @@
             </div>
         </div> <!-- .container -->
     </section>
+    <!-- End Trusted -->
 
+    <!-- Start Pricing -->
+    <section class="pricing">
+        <div class="title-pric text-center  py-5">
+            <h2 class="name-title">Pricing</h2>
+            <p class="mb-5 mt-3">Choose the package</p>
+            <div class="box-title-pric">
+                <a class="pric-link text-right">Photos</a>
+                <span class="bull-title-pric"></span>
+                <a class="pric-link">Video</a>
+            </div>
+        </div><!-- ./title-pric -->
+        <div class="container">
 
+        </div> <!-- ./container -->
+    </section>
+    <!-- End Pricing -->
 
+    <!-- Start Said-About -->
+    <section class="said-about py-5">
+        <div class="container">
+            <ul class="title-menu">
+                <li>large photo </li>
+                <li>Feature Two </li>
+                <li>Feature Three </li>
+                <li>Feature Four </li>
+                <li>Feature Five</li>
+            </ul><!-- ./title-menu -->
+            <div class="pric-menu pb-4">
+                <div class="col-pric text-center ">
+                    <div class="head-col-pric py-4">
+                        <img src="images/pric/Group 470.png" alt="">
+                        <span class="num my-3 mx-auto d-block">1</span>
+                        <span class="sub-title">Pay/image</span>
+                    </div>
+                    <ul class="num-menu p-0 mt-3">
+                        <li>1</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                    </ul>
+                    <button class="btn-buy">2000 Sar</button>
+                </div> <!-- ./col-pric -->
+                <div class="col-pric text-center ">
+                    <div class="head-col-pric py-4">
+                        <img src="images/pric/Group 474.png" alt="">
+                        <span class="num my-3 mx-auto d-block">10</span>
+                        <span class="sub-title">Pay/image</span>
+                    </div>
+                    <ul class="num-menu p-0 mt-3">
+                        <li>1</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                    </ul>
+                    <button class="btn-buy">2000 Sar</button>
+                </div> <!-- ./col-pric -->
+                <div class="col-pric text-center ">
+                    <div class="head-col-pric py-4">
+                        <img src="images/pric/Group 478.png" alt="">
+                        <span class="num my-3 mx-auto d-block">50</span>
+                        <span class="sub-title">Pay/image</span>
+                    </div>
+                    <ul class="num-menu p-0 mt-3">
+                        <li>1</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                    </ul>
+                    <button class="btn-buy">2000 Sar</button>
+                </div> <!-- ./col-pric -->
+                <div class="col-pric text-center ">
+                    <div class="head-col-pric py-4">
+                        <img src="images/pric/Group 482.png" alt="">
+                        <span class="num my-3 mx-auto d-block">100</span>
+                        <span class="sub-title">Pay/image</span>
+                    </div>
+                    <ul class="num-menu p-0 mt-3">
+                        <li>1</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                    </ul>
+                    <button class="btn-buy">2000 Sar</button>
+                </div> <!-- ./col-pric -->
+                <div class="col-pric text-center ">
+                    <div class="head-col-pric py-4">
+                        <img src="images/pric/Group 470.png" alt="">
+                        <span class="title-companies bolder  my-3 mx-auto d-block">Companies</span>
+                        <span class="sub-title bolder">Unlimited</span>
+                    </div>
+                    <ul class="num-menu p-0 mt-3">
+                        <li>Open</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                    </ul>
+                    <button class="btn-buy">2000 Sar</button>
+                </div> <!-- ./col-pric -->
+                <div class="col-pric text-center ">
+                    <div class="head-col-pric py-4">
+                        <span class="special-pric mx-auto d-block bolder">Special<br> Request</span>
+                        <span class="sub-title bolder">Monthly Subscription</span>
+                    </div>
+                    <ul class="num-menu p-0 mt-3">
+                        <li>Unlimited</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                        <li>YES</li>
+                    </ul>
+                    <button class="btn-buy special">Buy Now</button>
+                </div> <!-- ./col-pric -->
+            </div> <!-- ./pric-menu -->
+            <div class="title-said-about text-center">
+                <h2 class="bolder head-title-said">What they said about us</h2>
+                <p>Nice Word said about the Store</p>
+            </div> <!-- ./title-said-about  -->
+            <div class="said-testmonial">
+                <div class="col-lg-4">
+                    <div class="testmonial-box p-4">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <h6 class="num-user">User One</h6>
+                        <h5 class="test-bost my-4">Nice Images Store</h5>
+                        <i class="fab fa-twitter twitter"></i>
+                        <span class="hour">2h</span>
+                    </div>
+                </div> <!-- ./col -->
+                <div class="col-lg-4">
+                    <div class="testmonial-box p-4">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <h6 class="num-user">User Two</h6>
+                        <h5 class="test-bost my-4">Amazing and happy to be
+                            here
+                        </h5>
+                        <i class="fab fa-twitter twitter"></i>
+                        <span class="hour">4h</span>
+                    </div>
+                </div> <!-- ./col -->
+                <div class="col-lg-4">
+                    <div class="testmonial-box p-4">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <h6 class="num-user">User Three </h6>
+                        <h5 class="test-bost my-4">Just do it and you will find
+                            what you lokking for.</h5>
+                        <i class="fab fa-twitter twitter"></i>
+                        <span class="hour">2 Days Ago
+                        </span>
+                    </div>
+                </div> <!-- ./col -->
+                <div class="col-lg-4">
+                    <div class="testmonial-box p-4">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <h6 class="num-user">User Four </h6>
+                        <h5 class="test-bost my-4">Just do it and you will find
+                            what you lokking for.</h5>
+                        <i class="fab fa-twitter twitter"></i>
+                        <span class="hour">2 Days Ago
+                        </span>
+                    </div>
+                </div> <!-- ./col -->
+                <div class="col-lg-4">
+                    <div class="testmonial-box p-4">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <h6 class="num-user">User Five </h6>
+                        <h5 class="test-bost my-4">Just do it and you will find
+                            what you lokking for.</h5>
+                        <i class="fab fa-twitter twitter"></i>
+                        <span class="hour">2 Days Ago
+                        </span>
+                    </div>
+                </div> <!-- ./col -->
+                <div class="col-lg-4">
+                    <div class="testmonial-box p-4">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <h6 class="num-user">User Siex </h6>
+                        <h5 class="test-bost my-4">Just do it and you will find
+                            what you lokking for.</h5>
+                        <i class="fab fa-twitter twitter"></i>
+                        <span class="hour">2 Days Ago
+                        </span>
+                    </div>
+                </div> <!-- ./col -->
+            </div> <!-- ./said-testmonial -->
+            <hr>
+        </div> <!-- ./container -->
+    </section>
+    <!-- End Said-About -->
+    
+    <!-- Start Footer -->
+    <footer class="mt-2 py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="about-foot">
+                        <h3 class="mb-4">About</h3>
+                        <p class="desc-about-foot">About the MOSAIC STOCK and a brief of what she
+                            do and how and where and anything intertesting
+                            for viewers.</p>
+                    </div>
+                    <div class="contact-foot">
+                        <h4 class="mb-3 cont-foot-title">Contact us</h4>
+                        <div class="row">
+                            <div class="col-6 p-1">
+                                <div class="location">
+                                    <i class="fa fa-map-marker-alt text-center"></i>
+                                    <span>Saudi Arabia , jadah 456street</span>
+                                </div>
+                            </div>
+                            <div class="col-6 p-1">
+                                <div class="info-foot">
+                                    <div>
+                                        <i class="fa fa-phone-alt"></i>
+                                        <span>+96605123546</span>
+                                    </div>
+                                    <div>
+                                        <i class="fa fa-at"></i>
+                                        <span>info@mosai.com</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> <!-- ./col -->
+                <div class="col-lg-4">
+                    <div class="mosaic-foot">
+                        <h3 class="mb-4">Mosaic stock.com</h3>
+                        <div class="row">
+                            <div class="col-6">
+                                <ul>
+                                    <li>Home</li>
+                                    <li>Vector images</li>
+                                    <li>about us </li>
+                                    <li>Pricing</li>
+                                </ul>
+                            </div>
+                            <div class="col-6">
+                                <ul>
+                                    <li>Home</li>
+                                    <li>Vector images</li>
+                                    <li>about us </li>
+                                    <li>Pricing</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="newsletter-foot">
+                        <h3 class="mb-4">Newsletter</h3>
+                        <p class="mt-5 pt-5">Text to encourge to subscribe like free
+                            stuff</p>
+                        <div class="box-btn-news ">
+                            <input type="text" placeholder="Your Email..">
+                            <button class="bet-news">Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- ./row -->
+        </div> <!-- ./container -->
+    </footer>
+    <!-- End Footer -->
 
-
-
-
-
-
-
-
-
+    <!-- Start Coby Right -->
+    <div class="coby-right pt-2">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="social-copy text-center">
+                        <div>
+                            <i class="fab fa-twitter    "></i>
+                            <span>8k Followers</span>
+                        </div>
+                        <div>
+                            <i class="fab fa-facebook-f"></i>
+                            <span>12k Likes </span>
+                        </div>
+                        <div>
+                            <i class="fa fa-basketball-ball"></i>
+                            <span>4k Followers</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 text-right">
+                    <p>&copy; All Copyright for Mosaic stock</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Coby Right -->
 
 
     <!-- Jquery-Libiry -->
@@ -514,6 +804,8 @@
     <script src="js/vandors/popper.min.js"></script>
     <!-- Bootstrap-Libiry -->
     <script src="js/vandors/bootstrap.min.js"></script>
+    <!-- Slick-Libiry -->
+    <script src="js/vandors/slick.min.js"></script>
     <!-- Main -->
     <script src="js/main.js"></script>
 </body>
