--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
         </div> <!-- ./container -->
     </section>
     <!-- End Said-About -->
-    
+
     <!-- Start Footer -->
     <footer class="mt-2 py-5">
         <div class="container">
@@ -756,7 +756,7 @@
                 <div class="col-lg-4">
                     <div class="newsletter-foot">
                         <h3 class="mb-4">Newsletter</h3>
-                        <p class="mt-5 pt-5">Text to encourge to subscribe like free
+                        <p class="mt-lg-5 pt-lg-5">Text to encourge to subscribe like free
                             stuff</p>
                         <div class="box-btn-news ">
                             <input type="text" placeholder="Your Email..">
@@ -773,10 +773,10 @@
     <div class="coby-right pt-2">
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <div class="social-copy text-center">
                         <div>
-                            <i class="fab fa-twitter    "></i>
+                            <i class="fab fa-twitter "></i>
                             <span>8k Followers</span>
                         </div>
                         <div>
@@ -789,7 +789,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 text-right">
+                <div class="col-12 col-md-6 text-md-right text-center all-right">
                     <p>&copy; All Copyright for Mosaic stock</p>
                 </div>
             </div>
