--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                                     <div class="user-form">
                                         <div class="head-user-form">
                                             <div class="row">
-                                                <div class="col-lg-2">
+                                                <div class="col-2">
                                                     <i class="fa fa-user"></i>
                                                 </div>
-                                                <div class="col-lg-10">
+                                                <div class="col-10">
                                                     <h2 class="title-user-form">Ramy Slaher</h2>
                                                     <span>ID : 01234567</span>
                                                 </div>
-                                                <div class="col-12">
+                                                <div class="col-12 mt-4">
                                                     <ul class="list-user-form-nav">
                                                         <li>
                                                             <a href="#">Collections</a>
@@ -86,6 +86,7 @@
                                                             <a href="#">Special request</a>
                                                         </li>
                                                         <li>
+                                                            
                                                             <a href="#">Settings</a>
                                                         </li>
                                                         <li>
@@ -510,7 +511,7 @@
             <div class="box-title-pric">
                 <a class="pric-link text-right">Photos</a>
                 <span class="bull-title-pric"></span>
-                <a class="pric-link">Video</a>
+                <a class="pric-link text-right">Video</a>
             </div>
         </div><!-- ./title-pric -->
         <div class="container">
