--- a/index-rtl.html
+++ b/index-rtl.html
@@ -10,12 +10,17 @@
     <link rel="stylesheet" href="css/vandors/all.min.css">
     <!-- Boostrab-Libiry -->
     <link rel="stylesheet" href="css/vandors/bootstrap.min.css">
+    <!-- Boostrab-rtl-Libiry -->
+    <link rel="stylesheet" href="css/vandors/bootstrap.min-rtl.css">
     <!-- Normalize-Libiry -->
     <link rel="stylesheet" href="css/vandors/normalize.css">
     <!-- Slick-Libiry -->
     <link rel="stylesheet" href="css/vandors/slick.css">
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
+     <!-- Style-rtl -->
+     <link rel="stylesheet" href="css/style-rtl.css">
+    
 </head>
 
 <body>
@@ -37,7 +42,7 @@
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <div class="col-lg-6 ml-auto">
+                        <div class="col-lg-6 mr-auto">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
                                     <a class="nav-link" href="#">Pricing</a>
@@ -67,7 +72,7 @@
                                     <div class="user-form">
                                         <div class="head-user-form">
                                             <div class="row">
-                                                <div class="col-2 ml-1">
+                                                <div class="col-2 mr-1">
                                                     <i class="fa fa-user"></i>
                                                 </div>
                                                 <div class="col-9">
@@ -513,9 +518,9 @@
             <h2 class="name-title">Pricing</h2>
             <p class="mb-5 mt-3">Choose the package</p>
             <div class="box-title-pric">
-                <a class="pric-link text-right">Photos</a>
+                <a class="pric-link text-left">Photos</a>
                 <span class="bull-title-pric"></span>
-                <a class="pric-link text-right">Video</a>
+                <a class="pric-link text-left">Video</a>
             </div>
         </div><!-- ./title-pric -->
         <div class="container">
@@ -811,8 +816,8 @@
     <script src="js/vandors/bootstrap.min.js"></script>
     <!-- Slick-Libiry -->
     <script src="js/vandors/slick.min.js"></script>
-    <!-- Main -->
-    <script src="js/main.js"></script>
+    <!-- Main-rtl -->
+    <script src="js/main-rtl.js"></script>
 </body>
 
 </html>
